psk-toc overflow fix

--- a/themes/newlook/components/psk-card/psk-card.css
+++ b/themes/newlook/components/psk-card/psk-card.css
@@ -5,6 +5,9 @@
     padding:20px 0px 10px;
 } 
 
+.card.psk-card .psk-description{
+    padding:0;
+}
 .image_wrapper{
     padding-top: 10px;
 }
@@ -90,7 +93,14 @@
     width:20rem;
     position: fixed;
     right:0;
-    top:150px;
+    top:125px;
+    height:80vh;
+    overflow: auto;
+    scrollbar-width: none;
+}
+
+.table-of-content::-webkit-scrollbar{
+    display:none;
 }
 
 .table-of-content .psk-card .card-body,
@@ -119,8 +129,7 @@
 }
 
 .table-of-content .card-body span:hover{
-    color:#00289c;
-    font-weight: 500;
+    color:#0029b4;
 }
 
 .psk-card .table-of-content{
@@ -213,6 +222,7 @@
     padding-top: 130px;
     margin-top:5rem;
 }
+
 @media(max-width:960px){
     .table-of-content{
      position: static;
